--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced Painzy Obfuscator Pro</title>
+    <title>Advanced Skyx Obfuscator Pro</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <div class="loading-screen" id="loadingScreen">
         <div class="loading-content">
             <div class="loading-logo">⚡</div>
-            <div class="loading-text">Advanced Painzy Obfuscator Pro</div>
+            <div class="loading-text">Advanced Skyx Obfuscator Pro</div>
             <div class="loading-spinner"></div>
             <div class="loading-progress">
                 <div class="loading-progress-bar"></div>
@@ -33,7 +33,7 @@
         <div class="navbar-container">
             <a href="https://t.me/painzyfvck" class="navbar-brand">
                 <i class="fas fa-bolt"></i>
-                <span>Painzy Obfuscator</span>
+                <span>Skyx Obfuscator</span>
             </a>
             
             <div class="navbar-content">
@@ -225,7 +225,7 @@
     <input type="text" class="hidden-input" id="hiddenInput" readonly>
     
     <div class="header">
-        <h1>⚡ Advanced Painzy Obfuscator Pro</h1>
+        <h1>⚡ Advanced Skyx Obfuscator Pro</h1>
         <p>Professional JavaScript code protection with multiple encoding options</p>
     </div>
 
@@ -444,7 +444,7 @@
     </div>
 
     <div class="footer">
-        <p>Advanced Painzy Obfuscator Pro &copy; 2025 | Secure your JavaScript code with professional obfuscation</p>
+        <p>Advanced Skyx Obfuscator Pro &copy; 2025 | Secure your JavaScript code with professional obfuscation</p>
     </div>
 
     <script src="pobf.js"></script>
