--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!-- Navbar -->
     <nav class="navbar">
         <div class="navbar-container">
-            <a href="https://t.me/painzyfvck" class="navbar-brand">
+            <a href="https://t.me/Qiee-Developer" class="navbar-brand">
                 <i class="fas fa-bolt"></i>
                 <span>Skyx Obfuscator</span>
             </a>
@@ -372,7 +372,7 @@
                     <!-- Custom Name Field - Hidden by default -->
                     <div class="form-group hidden" id="customNameGroup">
                         <label class="form-label">Custom File Name</label>
-                        <input type="text" id="customFileName" class="form-input" placeholder="KinGPainZy" value="" disabled>
+                        <input type="text" id="customFileName" class="form-input" placeholder="SkyxCode" value="" disabled>
                     </div>
 
                     <button type="submit" class="process-btn" id="processBtn" disabled>
